tests/snapshots/enums__core__bindgen.snap
---
source: tests/enums.rs
expression: bo.bindings
---
// Bindings generated by `windows-bindgen` 0.49.0

#![allow(
    non_snake_case,
    non_upper_case_globals,
    non_camel_case_types,
    dead_code,
    clippy::all
)]
pub type HRESULT = i32;
pub const S_OK: HRESULT = 0i32;

