tests/snapshots/enums__core__ls-targets_es-bindgen.snap
---
source: tests/enums.rs
expression: bo.bindings
---
#![allow(non_snake_case, non_upper_case_globals, non_camel_case_types)]
pub const S_OK: HRESULT = 0;
pub type HRESULT = i32;

